1.6 Add comment and readme